--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,8 @@ body {
   top: 0;
   left: 0;
   outline: none;
-  background: url("../static/stars.png") no-repeat center center;
-  background-size: cover;
+  /* background: url("../static/stars.png") no-repeat center center;
+  background-size: cover; */
 }
 
 .container {
